--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "tsx src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "build": "npx tsc ",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
